# Stratum

./: Cargo.toml  README.md  build.rs  config.example.toml  guide.md  install.sh  stratum.rc
.github/workflows/: release.yml
benches/: parser_bench.rs
scripts/: install.ps1  install.sh
src/: app.rs  clipboard.rs  errors.rs  main.rs  talk.rs
src/agent/: handler.rs  mod.rs  protocol.rs  server.rs
src/ai/: chat.rs  commands.rs  credentials.rs  memory.rs  mod.rs  natural.rs  provider.rs  registry.rs
src/config/: mod.rs  theme.rs
src/features/: consequence.rs  dimensional_panes.rs  inline_docs.rs  mod.rs  mutation_preview.rs
src/input/: keyboard.rs  mod.rs  tracker.rs
src/layout/: mod.rs  panes.rs  tabs.rs
src/parser/: ansi.rs  mod.rs
src/renderer/: glyph_atlas.rs  gpu.rs  mod.rs  overlay.rs  terminal.wgsl
src/screen/: grid.rs  mod.rs  selection.rs
src/suggestions/: engine.rs  mod.rs  provider.rs  types.rs
src/suggestions/providers/: cargo.rs  docker.rs  env.rs  filesystem.rs  git.rs  history.rs  make.rs  mod.rs  nos_shell.rs  npm.rs  process.rs  ssh.rs
src/terminal/: mod.rs  pane.rs  pty.rs
